--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <!--Header Text-->
                         <h2 class = "text-base text-sky-950 tracking-wider" style = "line-height: 2.1rem;">
                            <b>Overview:</b><br>
-                            The Modern Middle East Genomics Project (MMEGP) is the largest genome-wide study of the Middle East to date. The study will collect saliva samples from eligible individuals (free of charge) which will then undergo <b>30x Whole-Genome Sequencing (WGS) </b>. This type of sequencing is <b>3,000x</b> more in-depth then services such as 23andme and Ancestry! Participants will periodically receive project updates and contribute to the genomic history of the Middle East. 
+                            The Modern Middle East Genomics Project (MMEGP) is the largest genome-wide study of the Middle East to date. The study will collect saliva samples from eligible individuals (free of charge) which will then undergo <b>30x Whole-Genome Sequencing (WGS) </b>. This type of sequencing is <b>3,000x</b> more in-depth then services such as 23andme and Ancestry. Participants will periodically receive project updates and contribute to the genomic history of the Middle East!
                             <br><br>
                             <b>Goals:</b><br>
                             The goals of this project are to:<br>
@@ -115,7 +115,7 @@
                             3. I am willing to provide a <b>saliva sample</b><br>                   
                             <br>
                             <b>Ancestral Eligibility:</b><br>
-                            I have parents, grandparents, and great-grandparents on <b>all sides</b> from one of the <b>following</b> regions/city:<br><br>
+                            I have parents, grandparents, and great-grandparents on <b>all sides from every generation</b> from one of the <b>following</b> regions/city:<br><br>
                             1. <b>Lebanon (specific regions eligible)</b>
                             <ul class="list-disc ml-8">
                                 <li>North Governorate  Bsharri/Zgharta, and other mountainous areas</li>
@@ -140,10 +140,10 @@
                     <!--Eligbility button-->
                     <div class="w-full flex flex-col p-14">
                         <a href="#" target="_blank" class = "px-8 py-4 rounded-full bg-blue-950 hover:bg-sky-950 active:scale-95 text-white text-sm font-semibold text-center">
-                            Fill Out the Interest Form
+                            Fill out the Interest Form
                         </a><br>
                         <a href="#" target="_blank" target="_blank" class = "px-8 py-4 rounded-full bg-slate-300 hover:bg-slate-400 active:scale-95 text-blue-950 text-sm font-semibold text-center">
-                            View Full Project
+                            View Full Project Outline
                         </a><br>
                         <p class="text-base text-blue-950">*This project has been approved by the Institutional Review Board (IRB) of Emory University</p>
                     </div>
