added opt out clause

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                             View Full Project Outline
                         </a><br>
                         <p class="text-base text-blue-950">*This project has been approved by the Institutional Review Board (IRB) of Emory University</p>
+                        <br>
+                        <p class="text-base text-blue-950">*Participants may opt out at any point in the study</p>
                     </div>
 
                 </div>
